Fixed tabs showing horizontal scrollbar when vertical scrollbar is present

--- a/src/app/component/tabs/tabs.scss
+++ b/src/app/component/tabs/tabs.scss
@@ -12,6 +12,7 @@
 
 .tab {
   text-align: left;
+  margin-right: 10px;
 }
 
 .tab:hover {
@@ -20,13 +21,17 @@
 
 // not used anymore
 .tab button {
-  text-align: left;
-  width: 100%;
-  border-radius: 0;
+  //text-align: left;
+  //width: 100%;
+  //border-radius: 0;
 }
 
 .tab-global-item {
   background-color: RGBA(0, 255, 0, 0.2);
+}
+
+.tab-warning {
+  background-color: rgba(255, 120, 0, 0.2);
 }
 
 .tab-content {
